Работаю над чекбоксами

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                     </li>
 
                 </ul>
-            </div>
-        </section>
+            </div>  <!-- /container -->
+        </section> <!-- /products -->
 
 
         <!-- About -->
