--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
                     <ul class="nav-list">
                         <li class="nav-item"> <a class="nav-link" href="#">Студия</a></li>
                         <li class="nav-item"> <a class="nav-link" href="#">Клиенты</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="#">Магазин</a></li>
+                        <li class="nav-item"> <a class="nav-link nav-link-current" href="#">Магазин</a></li>
                         <li class="nav-item"> <a class="nav-link" href="#">Контакты</a></li>
                     </ul>
                 </nav>
@@ -65,34 +65,113 @@
                             <fieldset class="group-input">
                                 <legend class="group-title">СЕТКА:</legend>
 
-                                <input type="radio" name="layout" id="adaptive-layout" checked>
-                                <label class="radio-label" for="adaptive-layout">Адаптивная</label>
+                                <label class="radio-label" for="adaptive-layout">
+                                    <input type="radio" name="layout" id="adaptive-layout" checked>
+                                    <div>
+                                        <svg width="25px" height="25px" viewBox="0 0 25 25"
+                                            enable-background="new 0 0 25 25" xml:space="preserve">
+                                            <path fill="#999999"
+                                                d="M12.5,4c4.687,0,8.5,3.813,8.5,8.5c0,4.687-3.813,8.5-8.5,8.5C7.813,21,4,17.187,4,12.5C4,7.813,7.813,4,12.5,4 M12.5,0
+                                        C5.597,0,0,5.597,0,12.5S5.597,25,12.5,25S25,19.403,25,12.5S19.403,0,12.5,0L12.5,0z" />
+                                        </svg>
+                                    </div><p>Адаптивная</p>
+                                </label>
 
-                                <input type="radio" name="layout" id="fix-layout">
-                                <label class="radio-label" for="fix-layout">Фиксированная</label>
+                                <label class="radio-label" for="adaptive-layout">
+                                    <input type="radio" name="layout" id="adaptive-layout">
+                                    <div>
+                                        <svg width="25px" height="25px" viewBox="0 0 25 25"
+                                            enable-background="new 0 0 25 25" xml:space="preserve">
+                                            <path fill="#999999"
+                                                d="M12.5,4c4.687,0,8.5,3.813,8.5,8.5c0,4.687-3.813,8.5-8.5,8.5C7.813,21,4,17.187,4,12.5C4,7.813,7.813,4,12.5,4 M12.5,0
+                                            C5.597,0,0,5.597,0,12.5S5.597,25,12.5,25S25,19.403,25,12.5S19.403,0,12.5,0L12.5,0z" />
+                                        </svg>
+                                    </div><p>Фиксированная</p>
+                                </label>
 
 
-                                <input type="radio" name="layout" id="responsive-layout">
-                                <label class="radio-label" for="responsive-layout">Резиновая</label>
+                                <label class="radio-label" for="adaptive-layout">
+                                    <input type="radio" name="layout" id="adaptive-layout">
+                                    <div>
+                                        <svg width="25px" height="25px" viewBox="0 0 25 25"
+                                            enable-background="new 0 0 25 25" xml:space="preserve">
+                                            <path fill="#999999"
+                                                d="M12.5,4c4.687,0,8.5,3.813,8.5,8.5c0,4.687-3.813,8.5-8.5,8.5C7.813,21,4,17.187,4,12.5C4,7.813,7.813,4,12.5,4 M12.5,0
+                                            C5.597,0,0,5.597,0,12.5S5.597,25,12.5,25S25,19.403,25,12.5S19.403,0,12.5,0L12.5,0z" />
+                                        </svg>
+                                    </div><p>Резиновая</p> 
+                                </label>
                             </fieldset>
 
                             <fieldset class="group-input">
                                 <legend class="group-title">ОСОБЕННОСТИ:</legend>
 
-                                <input type="checkbox" name="slider" id="slider-input" checked>
-                                <label class="checkbox-label" for="slider-input">Слайдер</label>
+                                <label class="checkbox-label" for="slider-input">
+                                    <input type="checkbox" name="slider" id="slider-input" checked>
+                                    <div>
+                                        <svg width="23px" height="23px" viewBox="0 0 23 23"
+                                            enable-background="new 0 0 23 23" xml:space="preserve">
+                                            <polygon fill="#999999"
+                                                points="7.285,7.486 4.456,10.315 12.239,18.098 26.171,4.166 23.343,1.337 12.239,12.439" />
+                                            <path fill="#999999"
+                                                d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3
+                                        C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" />
+                                        </svg>
+                                    </div><p>Слайдер</p>
+                                </label>
 
-                                <input type="checkbox" name="slider" id="advantages-input">
-                                <label class="checkbox-label" for="advantages-input">Блок преимуществ</label>
+                                <label class="checkbox-label" for="slider-input">
+                                    <input type="checkbox" name="slider" id="slider-input">
+                                    <div>
+                                        <svg width="23px" height="23px" viewBox="0 0 23 23"
+                                            enable-background="new 0 0 23 23" xml:space="preserve">
+                                            <polygon fill="#999999"
+                                                points="7.285,7.486 4.456,10.315 12.239,18.098 26.171,4.166 23.343,1.337 12.239,12.439" />
+                                            <path fill="#999999"
+                                                d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3
+                                            C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" />
+                                        </svg></div><p>Блок преимуществ</p>
+                                </label>
 
-                                <input type="checkbox" name="slider" id="news-input" checked>
-                                <label class="checkbox-label" for="news-input">Новости</label>
+                                <label class="checkbox-label" for="slider-input">
+                                    <input type="checkbox" name="slider" id="slider-input" checked>
+                                    <div>
+                                        <svg width="23px" height="23px" viewBox="0 0 23 23"
+                                            enable-background="new 0 0 23 23" xml:space="preserve">
+                                            <polygon fill="#999999"
+                                                points="7.285,7.486 4.456,10.315 12.239,18.098 26.171,4.166 23.343,1.337 12.239,12.439" />
+                                            <path fill="#999999"
+                                                d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3
+                                            C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" />
+                                        </svg></div><p>Новости</p>
+                                </label>
 
-                                <input type="checkbox" name="slider" id="gallerey-input">
-                                <label class="checkbox-label" for="gallerey-input">Галерея</label>
+                                <label class="checkbox-label" for="slider-input">
+                                    <input type="checkbox" name="slider" id="slider-input">
+                                    <div>
+                                        <svg width="23px" height="23px" viewBox="0 0 23 23"
+                                            enable-background="new 0 0 23 23" xml:space="preserve">
+                                            <polygon fill="#999999"
+                                                points="7.285,7.486 4.456,10.315 12.239,18.098 26.171,4.166 23.343,1.337 12.239,12.439" />
+                                            <path fill="#999999"
+                                                d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3
+                                            C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" />
+                                        </svg></div><p>Галерея</p>
+                                </label>
 
-                                <input type="checkbox" name="slider" id="cart-input">
-                                <label class="checkbox-label" for="cart-input">Корзина</label>
+                                <label class="checkbox-label" for="slider-input">
+                                    <input type="checkbox" name="slider" id="slider-input">
+                                    <div>
+                                        <svg width="23px" height="23px" viewBox="0 0 23 23"
+                                            enable-background="new 0 0 23 23" xml:space="preserve">
+                                            <polygon fill="#999999"
+                                                points="7.285,7.486 4.456,10.315 12.239,18.098 26.171,4.166 23.343,1.337 12.239,12.439" />
+                                            <path fill="#999999"
+                                                d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3
+                                            C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" />
+                                        </svg>
+                                    </div><p>Корзина</p>
+                                </label>
 
                             </fieldset>
                             <input class="form-btn" type="submit" name="submit" value="ПОКАЗАТЬ">
@@ -122,7 +201,8 @@
                                 <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
                                     <img src="img/svg/browser.svg" alt="">
                                 </object>
-                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg"
+                                    type="image/svg+xml">
                                     <img src="img/svg/browser-hover.svg" alt="">
                                 </object>
 
@@ -141,7 +221,8 @@
                                 <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
                                     <img src="img/svg/browser.svg" alt="">
                                 </object>
-                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg"
+                                    type="image/svg+xml">
                                     <img src="img/svg/browser-hover.svg" alt="">
                                 </object>
 
@@ -160,7 +241,8 @@
                                 <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
                                     <img src="img/svg/browser.svg" alt="">
                                 </object>
-                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg"
+                                    type="image/svg+xml">
                                     <img src="img/svg/browser-hover.svg" alt="">
                                 </object>
 
@@ -179,7 +261,8 @@
                                 <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
                                     <img src="img/svg/browser.svg" alt="">
                                 </object>
-                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg"
+                                    type="image/svg+xml">
                                     <img src="img/svg/browser-hover.svg" alt="">
                                 </object>
 
@@ -198,7 +281,8 @@
                                 <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
                                     <img src="img/svg/browser.svg" alt="">
                                 </object>
-                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg"
+                                    type="image/svg+xml">
                                     <img src="img/svg/browser-hover.svg" alt="">
                                 </object>
 
@@ -217,7 +301,8 @@
                                 <object class="image-header" data="img/svg/browser.svg" type="image/svg+xml">
                                     <img src="img/svg/browser.svg" alt="">
                                 </object>
-                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg" type="image/svg+xml">
+                                <object class="image-header image-header-hover" data="img/svg/browser-hover.svg"
+                                    type="image/svg+xml">
                                     <img src="img/svg/browser-hover.svg" alt="">
                                 </object>
 
@@ -232,15 +317,23 @@
                         </div>
                     </div>
 
+                    <div class="pagination">
+                        <ul class="pagination-list">
+                            <li class="pagination-item"><a class="pagination-link" href="#">1</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">2</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">3</a></li>
+                        </ul>
+                        <a class="btn pagination-btn" href="#">Следующая</a>
+                    </div>
 
             </div> <!-- products-cards -->
 
-    </div>
+    </div> <!-- inner-page -->
+
 
     </section> <!-- products -->
 
 
-    </section>
     </div> <!-- / container -->
 
     </main>
